--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width= , initial-scale=1.0">
-     <title>Document</title>
+     <title>Fase 1-Planeacion</title>
  </head>
  <body>
      
@@ -20,6 +20,12 @@ Correo: zdvizcainog@unadvirtual.edu.co   <br>
  zareth.vizcino@gmail.com (personal) </h4>
  <hr>
  <h2>Fases del proyecto</h2>
+ <br>
+ <h3>Fase 2 - Diseño y construcción I</h3>
  <a href="fase2/design.html">Fase2</a>
+ <br>
+ <h3>Fase 3 - Diseño y construcción II</h3>
+ <a href="fase3/index.html">Fase3</a>
+ 
  </body>
  </html>
